--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -7,9 +7,12 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
+    "@prisma/extension-accelerate": "^2.0.2",
     "hono": "^4.10.0"
   },
   "devDependencies": {
+    "prisma": "^6.17.1",
     "wrangler": "^4.4.0"
   }
 }
