--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "@prisma/extension-accelerate": "^2.0.2",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "hono": "^4.10.0"
   },
   "devDependencies": {
