--- a/BACKEND/wrangler.jsonc
+++ b/BACKEND/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "my-app",
+  "name": "blog-app",
   "main": "src/index.ts",
   "compatibility_date": "2025-10-17",
   // "compatibility_flags": [
